cmake_minimum_required(VERSION 3.10)
project(daily_coding)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(daily1 daily1_int_array_tow_adds_up.cpp)
add_executable(daily2 daily2_int_list_product.cpp)
add_executable(daily3 daily3_bin_tree_serialize_deserialize.cpp)
add_executable(daily4 daily4_functional.cpp)
