cmake_minimum_required(VERSION 3.10)
project(daily_coding)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(daily1 daily1_int_array_tow_adds_up.cpp)
add_executable(daily2 daily2_int_list_product.cpp)
add_executable(daily3 daily3_bin_tree_serialize_deserialize.cpp)
add_executable(daily4 daily4_missing_positive.cpp)
add_executable(daily5 daily5_functional.cpp)
add_executable(daily6 daily6_xot_linked_list.cpp)
add_executable(daily7 daily7_count_decode_ways.cpp)
add_executable(daily8 daily8_count_unival_subtrees.cpp)
add_executable(daily9 daily9_largest_sum_of_non_adjacent_numbers.cpp)
